--- a/DOCOMP/WebContent/css/site.css
+++ b/DOCOMP/WebContent/css/site.css
@@ -120,6 +120,14 @@ a:hover {
   background-color: rgba(255, 255, 160, 0.4);
   color: rgba(0, 0, 0, 0.8);
 }
+::field{
+	input[type="text"]{
+height: 100px;
+width: 100px;
+}
+	
+	
+}
 
 
 /*******************************
